--- a/app/views/AdvanceNoticeView.scala.html
+++ b/app/views/AdvanceNoticeView.scala.html
@@ -14,20 +14,22 @@
  * limitations under the License.
  *@
 
+@import views.html.components._
+@import utils.MaskAndFormatUtils.*
+
 @this(
         layout: templates.Layout,
-        govukButton: GovUkButton,
         h1: Header1,
         h2: Header2,
         paragraph: Paragraph,
-        govukInsetText: GovUkInsetText,
-        govukSummaryList: GovUkSummaryList,
+        govukInsetText: GovukInsetText,
+        govukSummaryList: GovukSummaryList,
         link: Link,
         paragraphWithLink: ParagraphMessageWithLink,
-        govUkAccordion: GovUkAccordion
+        govukAccordion: GovukAccordion?
 )
 
-@(hmrcHelplineUrl: String, totalAmount: String, dueDate: String,  directDebitReference: String, bankAccountName: String, accountNumber: String, sortCode: String, paymentPlanReference: String)(implicit request: Request[_], messages: Messages)
+@(hmrcHelplineUrl: String, totalAmount: String, dueDate: String,  directDebitReference: String, bankAccountName: String, accountNumber: String, sortCode: String, paymentPlanReference: String, paymentPlanLink: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForManageJourneyNoForm(messages("advanceNotice.title")), backLink = Some(paymentPlanLink.url)) {
 
@@ -41,24 +43,32 @@
         linkUrl = hmrcHelplineUrl,
         linkRel = "noreferrer noopener",
         target = "_blank"
-    )    
+    )
 
     @paragraph("advanceNotice.p3")
 
     <img src="@routes.Assets.versioned("images/direct-debit-logo.jpg")" alt="Direct Debit" class="direct-debit-logo"/>
 
     @govukAccordion(
-        id = "hmrc-accordion",
-        sections = Seq(
+        Accordion(
+            id = "hmrc-accordion",
+            sections = Seq(
             AccordionSection(
-                heading = @h2("advanceNotice.accordion.heading"),
-                content = Seq(
-                        Html(messages("advanceNotice.accordion.p1")),
-                        Html(messages("advanceNotice.accordion.p2")),
-                        Html(messages("advanceNotice.accordion.p3")),
-                        Html(messages("advanceNotice.accordion.p4")),
-                        Html(messages("advanceNotice.accordion.p5"))
-                        )
+            heading = AccordionSectionHeading(
+            content = Text(messages("advanceNotice.accordion.heading"))
+        ),
+        content = HtmlContent(
+            Html(
+                s"""
+                    <p>${messages("advanceNotice.accordion.p1")}</p>
+                    <p>${messages("advanceNotice.accordion.p2")}</p>
+                    <p>${messages("advanceNotice.accordion.p3")}</p>
+                    <p>${messages("advanceNotice.accordion.p4")}</p>
+                    <p>${messages("advanceNotice.accordion.p5")}</p>
+                    """
+                )
+            )
+                )
             )
         )
     )
