--- a/app/views/PaymentPlanCancelledView.scala.html
+++ b/app/views/PaymentPlanCancelledView.scala.html
@@ -27,7 +27,7 @@
         link: Link
 )
 
-@(paymentPlanReference: String, call: Call, rows:Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
+@(paymentReference: String, call: Call, rows:Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForManageJourneyNoForm(messages("paymentPlanCancelled.title")), showBackLink = false) {
 
@@ -35,7 +35,7 @@
         title = messages("paymentPlanCancelled.panel.title"),
         body = Html(
                     s"${messages("paymentPlanCancelled.panel.body1")}" +
-                    s"${messages("paymentPlanCancelled.panel.strong", paymentPlanReference)}" +
+                    s"${messages("paymentPlanCancelled.panel.strong", paymentReference)}" +
                     s"${messages("paymentPlanCancelled.panel.body2")}"
                     ),
         classes = "govuk-!-margin-bottom-2"
@@ -56,7 +56,7 @@
     @govukSummaryList(SummaryList(
         card = Some(Card(
             title = Some(CardTitle(
-                content = messages("paymentPlanCancelled.paymentReference", paymentPlanReference)
+                content = messages("paymentPlanCancelled.paymentReference", paymentReference)
             ))
         )),
         rows = rows
