--- a/app/views/PaymentPlanSuspendedView.scala.html
+++ b/app/views/PaymentPlanSuspendedView.scala.html
@@ -26,7 +26,7 @@
         link: Link
 )
 
-@(paymentPlanReference: String, startDate: String, endDate: String, call: Call, rows:Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
+@(startDate: String, endDate: String, call: Call, rows:Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForManageJourneyNoForm(messages("paymentPlanSuspended.title")), showBackLink = false) {
 
