DTR-606: editing the payment reference

--- a/app/views/AdvanceNoticeView.scala.html
+++ b/app/views/AdvanceNoticeView.scala.html
@@ -93,7 +93,7 @@
         rows = Seq(
             SummaryListRow(
                 key = Key(content = messages("advanceNotice.yourPaymentDetails.reference")),
-                value = Value(content = HtmlContent(directDebitReference))
+                value = Value(content = HtmlContent(paymentPlanReference))
             ),
             SummaryListRow(
                 key = Key(content = messages("advanceNotice.yourPaymentDetails.totalAmount")),
