[DTR-835] Add Pagination Component to Direct Debit Instructions Page (#150)
* [DTR-292] Adding the pagination component

* [DTR-292] Rename ambiguous pagination reference

* [DTR-292] PaginationService added

* [DTR-292] Static text in translation file

* [DTR-292] Some refactoring

* [DTR-292] Adding ellipsis logic

* [DTR-292] Removing duplicates

* [DTR-292] Fix pagination landmark label

* [DTR-292] Updated Your Direct Debit Instructions page content

* [DTR-292] Adding the table

* [DTR-292] Update date formatting to use short month names

* [DTR-292] Some refactoring and unit tests added

* [DTR-292] Fixing failed unit tests

--- a/app/views/YourDirectDebitInstructionsView.scala.html
+++ b/app/views/YourDirectDebitInstructionsView.scala.html
@@ -16,6 +16,7 @@
 
 @import views.html.components.*
 @import utils.MaskAndFormatUtils.*
+@import viewmodels.govuk.PaginationFluency.*
 
 @this(
     layout: templates.Layout,
@@ -24,12 +25,15 @@
     paragraphMessageWithLink: ParagraphMessageWithLink,
     govukButton: GovukButton,
     govukErrorSummary: GovukErrorSummary,
-    govukSummaryList: GovukSummaryList
+    govukSummaryList: GovukSummaryList,
+    directDebitTable: DirectDebitTable,
+    govukInsetText: GovukInsetText,
+    directDebitPagination: DirectDebitPagination
 )
 
-@(directDebitDetails: Seq[DirectDebitDetails], maxLimitReached: Boolean = false)(implicit request: Request[_], messages: Messages)
+@(directDebitDetails: Seq[DirectDebitDetails], maxLimitReached: Boolean = false, paginationViewModel: PaginationViewModel = PaginationViewModel(), hmrcHelplineUrl: String)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleForSetupJourneyNoForm(messages("yourDirectDebitInstructions.title")), showBackLink = false) {
+@layout(pageTitle = titleForSetupJourneyNoForm(messages("yourDirectDebitInstructions.title")), showBackLink = false, useThreeQuartersGrid = true) {
 
     @if(maxLimitReached) {
         @govukErrorSummary(
@@ -48,7 +52,7 @@
     @paragraph("yourDirectDebitInstructions.p1")
 
     @paragraphMessageWithLink(
-        Some(messages("yourDirectDebitInstructions.p2")),
+        Some(messages("yourDirectDebitInstructions.p2.beforeLink")),
         linkMessage = messages("yourDirectDebitInstructions.p2.link"),
         linkUrl = routes.SetupDirectDebitPaymentController.onPageLoad().url,
         linkFullStop = false,
@@ -56,44 +60,22 @@
         maxLimit = maxLimitReached
     )
 
-    @paragraph("yourDirectDebitInstructions.p3.note")
-
-    @for(dd <- directDebitDetails) {
-        @govukSummaryList(SummaryList(
-            card = Some(Card(
-                title = Some(CardTitle(content = Text(dd.directDebitReference))),
-                actions = Some(Actions(
-                    items = Seq(
-                        ActionItem(
-                            href = routes.DirectDebitSummaryController.onRedirect(dd.directDebitReference).url,
-                            content = messages("yourDirectDebitInstructions.dl.view.add"),
-                            visuallyHiddenText = Some(messages(dd.directDebitReference))
-                        )
-                    )
-                ))
-            )),
-            rows = Seq(
-                SummaryListRow(
-                    key = Key(content = messages("yourDirectDebitInstructions.dl.direct.debit.reference")),
-                    value = Value(content = HtmlContent(dd.directDebitReference))
-                ),
-                SummaryListRow(
-                    key = Key(content = messages("yourDirectDebitInstructions.dl.date.setup")),
-                    value = Value(content = HtmlContent(dd.setupDate))
-                ),
-                SummaryListRow(
-                    key = Key(content = messages("yourDirectDebitInstructions.dl.sort.code")),
-                    value = Value(content = HtmlContent(maskSortCode(dd.sortCode)))
-                ),
-                SummaryListRow(
-                    key = Key(content = messages("yourDirectDebitInstructions.dl.account.number")),
-                    value = Value(content = HtmlContent(maskAccountNumber(dd.accountNumber)))
-                ),
-                SummaryListRow(
-                    key = Key(content = messages("yourDirectDebitInstructions.dl.payment.plans")),
-                    value = Value(content = HtmlContent(dd.paymentPlans))
+    @govukInsetText(
+        InsetText(
+            content = HtmlContent(
+                paragraphMessageWithLink(
+                    message1   = Some(messages("yourDirectDebitInstructions.p3.beforeLink")),
+                    linkMessage = messages("yourDirectDebitInstructions.p3.link"),
+                    message2   = Some(messages("yourDirectDebitInstructions.p3.afterLink")),
+                    linkUrl    = hmrcHelplineUrl,
+                    linkRel    = "noreferrer noopener",
+                    target     = "_blank"
                 )
             )
-        ))
-    }
+        )
+    )
+
+    @directDebitTable(directDebitDetails)
+
+    @directDebitPagination(paginationViewModel)
 }
