--- a/app/views/components/ThreeQuartersMainContent.scala.html
+++ b/app/views/components/ThreeQuartersMainContent.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2025 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,25 +12,15 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package viewmodels
+@this()
 
-package object govuk {
+@(content: Html)
 
-  object all
-      extends ImplicitConversions
-      with BackLinkFluency
-      with ButtonFluency
-      with CheckboxFluency
-      with DateFluency
-      with ErrorSummaryFluency
-      with FieldsetFluency
-      with HintFluency
-      with InputFluency
-      with LabelFluency
-      with PaginationFluency
-      with RadiosFluency
-      with SummaryListFluency
-      with TagFluency
-}
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-three-quarters">
+        @content
+    </div>
+</div>
+
