DTR-616: Prototype changes

--- a/app/views/DirectDebitConfirmationView.scala.html
+++ b/app/views/DirectDebitConfirmationView.scala.html
@@ -24,10 +24,12 @@
         govukButton: GovukButton,
         paragraph: Paragraph,
         header2: Header2,
-        mainButton: MainButton
+        mainButton: MainButton,
+        paragraphWithLink: ParagraphMessageWithLink,
+        govukSummaryList: GovukSummaryList
 )
 
-@(referenceNumber: String)(implicit request: Request[_], messages: Messages)
+@(hmrcHelplineUrl: String,referenceNumber: String, directDebitDetails: SummaryList, paymentDetails: SummaryList)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForSetupJourneyNoForm(messages("directDebitConfirmation.title")), showBackLink = false) {
 
@@ -36,26 +38,54 @@
         content = HtmlContent(messages("directDebitConfirmation.panel.body", referenceNumber)),
     ))
 
-    @govukInsetText(
-        InsetText(
-            content = Text(messages("directDebitConfirmation.inset.text"))
-        )
-    )
-
     @header2("directDebitConfirmation.h2")
 
     @paragraph(messages("directDebitConfirmation.p1", referenceNumber))
 
-    <p class="govuk-body">
-        <a href="#" class="govuk-link" download="direct-debit-confirmation.pdf">@messages("directDebitConfirmation.download")</a>
-    </p>
-
-    @header2("directDebitConfirmation.printingHelp.h2")
-    @paragraph(messages("directDebitConfirmation.printSafari"))
-    @paragraph(messages("directDebitConfirmation.printChromeFirefoxEdge"))
-    @paragraph(messages("directDebitConfirmation.printNoPrinter"))
-
-    @govukButton(
-        ButtonViewModel(messages("site.continue")).asSecondaryButton()
+    @paragraphWithLink(
+        message1 = Some(messages("directDebitConfirmation.p2")),
+        linkMessage = messages("directDebitConfirmation.p2.link"),
+        linkUrl = hmrcHelplineUrl
     )
+
+
+
+    <details class="govuk-details">
+        <summary class = "govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                    @messages("directDebitConfirmation.summaryTextDetails.h1")
+                </span>
+        </summary>
+
+        <div class="govuk-details__text">
+            @paragraph("directDebitConfirmation.summaryTextDetails.p1")
+            @paragraph("directDebitConfirmation.summaryTextDetails.p2")
+            @paragraph("directDebitConfirmation.summaryTextDetails.p3")
+            @paragraph("directDebitConfirmation.summaryTextDetails.p4")
+            @paragraph("directDebitConfirmation.summaryTextDetails.p5")
+        </div>
+    </details>
+
+    @header2("directDebitConfirmation.directDebitDetails")
+    @govukSummaryList(directDebitDetails)
+
+    @header2("directDebitConfirmation.yourPaymentDetails")
+    @govukSummaryList(paymentDetails)
+
+    @govukInsetText(
+        InsetText(
+            content = Text(messages("directDebitConfirmation.printInset"))
+        )
+    )
+
+    @paragraphWithLink(
+        linkMessage = messages("directDebitConfirmation.viewPaymentPlans"),
+        linkUrl = routes.DirectDebitSummaryController.onPageLoad().url
+    )
+
+    @paragraphWithLink(
+        linkMessage = messages("directDebitConfirmation.viewDirectDebitInstructions"),
+        linkUrl = routes.YourDirectDebitInstructionsController.onPageLoad().url
+    )
+
 }
