--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -27,10 +27,12 @@
         header1: Header1,
         header2: Header2,
         paragraph: Paragraph,
-        govukSummaryList: GovukSummaryList
+        paragraphWithLink: ParagraphMessageWithLink,
+        govukSummaryList: GovukSummaryList,
+        link: Link
 )
 
-@(planType: String, paymentReference: String, showAmendLink: Boolean, showCancelLink: Boolean, showSuspendLink: Boolean, isSuspensionActive: Boolean, suspensionStartDate: String, suspensionEndDate: String, rows: Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
+@(planType: String, paymentReference: String, showAmendLink: Boolean, showCancelLink: Boolean, showSuspendLink: Boolean, isSuspensionActive: Boolean, suspensionStartDate: String, suspensionEndDate: String, rows: Seq[SummaryListRow], isAdvanceNoticePresent: Boolean, totalAmount: String, dueDate: String, call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForManageJourneyNoForm(messages("paymentPlanDetails.title")), backLink = Some(routes.DirectDebitSummaryController.onPageLoad().url)) {
     @header1("paymentPlanDetails.heading")
@@ -45,7 +47,20 @@
         }
     }
 
-    @govukSummaryList(SummaryList(
+    @if(planType == PaymentPlanType.VariablePaymentPlan.toString) {
+        @if(isAdvanceNoticePresent) {
+            @paragraphWithLink(
+                Some(messages("paymentPlanDetails.inset.advanceNotice.text", totalAmount, dueDate)),
+                linkMessage = messages("paymentPlanDetails.advanceNotice.link"),
+                linkUrl = call.url
+            )
+        } else {
+            @paragraph("paymentPlanDetails.inset.noAdvanceNotice.text")
+        }
+    }
+
+
+@govukSummaryList(SummaryList(
         card = Some(Card(
             title = Some(CardTitle(
             content = messages("paymentPlanDetails.details.paymentReference", paymentReference)
