--- a/app/views/BankApprovalView.scala.html
+++ b/app/views/BankApprovalView.scala.html
@@ -29,12 +29,13 @@
 
 @layout(pageTitle = titleForSetupJourneyNoForm(messages("bankApproval.title")), showSignOut = false, showBackLink = false) {
      @header1("bankApproval.heading")
-     @paragraph("bankApproval.p1")
      @paragraphMessageWithLink(
-         Some(messages("bankApproval.p2")),
-         linkMessage = messages("bankApproval.p2.link"),
+         Some(messages("bankApproval.p1")),
+         linkMessage = messages("bankApproval.p1.link"),
          linkUrl = payingHmrcUrl,
          linkFullStop = false,
-         message2 = Some(messages("bankApproval.p2.link.after"))
+         message2 = Some(messages("bankApproval.p1.link.after")),
+        linkRel      = "noreferrer noopener",
+        target       = "_blank"
      )
 }
