--- a/app/views/SuspensionPeriodRangeDateView.scala.html
+++ b/app/views/SuspensionPeriodRangeDateView.scala.html
@@ -14,6 +14,7 @@
  * limitations under the License.
  *@
 
+@import viewmodels.DateRangeErrorHelper
 @import views.html.components.*
 
 @this(
@@ -44,12 +45,17 @@
                 )
             ) {
 
-    @formHelper(action = routes.SuspensionPeriodRangeDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @defining(DateRangeErrorHelper.collapseErrors(
+        form,
+        Seq("suspensionPeriodRangeStartDate", "suspensionPeriodRangeEndDate")
+    )) { result =>
+
+        @formHelper(action = routes.SuspensionPeriodRangeDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
 
-        @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value.day")))
-        }
+            @if(result.form.errors.nonEmpty) {
+                @govukErrorSummary(ErrorSummaryViewModel(result.form, errorLinkOverrides = result.errorLinkOverrides))
+            }
 
             @if(mode == NormalMode) {
                 @header1("suspensionPeriodRangeDate.heading.normal")
