DTR-616: Minor Fixes

--- a/app/views/DirectDebitConfirmationView.scala.html
+++ b/app/views/DirectDebitConfirmationView.scala.html
@@ -48,7 +48,7 @@
         linkUrl = hmrcHelplineUrl
     )
 
-
+    <img src="@routes.Assets.versioned("images/direct-debit-logo.jpg")" alt="Direct Debit" class="direct-debit-logo"/>
 
     <details class="govuk-details">
         <summary class = "govuk-details__summary">
