--- a/app/views/BankApprovalView.scala.html
+++ b/app/views/BankApprovalView.scala.html
@@ -33,9 +33,8 @@
          Some(messages("bankApproval.p1")),
          linkMessage = messages("bankApproval.p1.link"),
          linkUrl = payingHmrcUrl,
-         linkFullStop = false,
-         message2 = Some(messages("bankApproval.p1.link.after")),
-        linkRel      = "noreferrer noopener",
-        target       = "_blank"
+         linkFullStop = true,
+         linkRel      = "noreferrer noopener",
+         target       = "_blank"
      )
 }
