DTR-681: merge issues fixed

--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -55,17 +55,30 @@
         )
     ))
 
-    @h2("directDebitPaymentSummary.activePayment.h1")
+    @if(paymentPlansList.size > 0) {
+        @h2("directDebitPaymentSummary.activePayment.h1")
 
-    @paragraphWithLink(
-        Some(messages("directDebitPaymentSummary.p1")),
-        linkMessage = messages("directDebitPaymentSummary.p1.link"),
-        linkUrl = messages("accountDetailsNotVerified.p2.url")
-    )
+        @paragraphWithLink(
+            Some(messages("directDebitPaymentSummary.activePayment.p1")),
+            linkMessage = messages("directDebitPaymentSummary.activePayment.p1.linkText"),
+            linkUrl = routes.SetupDirectDebitPaymentController.onPageLoad().url,
+            linkFullStop = true
+        )
 
-    @paragraph("directDebitPaymentSummary.setupPayment.p1")
+        @paragraph("directDebitPaymentSummary.activePayment.p2")
 
-    @for(plan <- paymentPlansList) {
-        @govukSummaryList(plan)
+        @for(plan <- paymentPlansList) {
+            @govukSummaryList(plan)
+        }
+    } else {
+        @paragraph("directDebitPaymentSummary.noActivePaymentPlans.p1")
+
+        @h2("directDebitPaymentSummary.setupPayment.h1")
+
+        @paragraph("directDebitPaymentSummary.setupPayment.p1")
+
+        @govukButton(
+            ButtonViewModel(messages("directDebitPaymentSummary.addPaymentButton"))
+        )
     }
 }
