--- a/app/views/AddPaymentPlanEndDateView.scala.html
+++ b/app/views/AddPaymentPlanEndDateView.scala.html
@@ -14,12 +14,17 @@
  * limitations under the License.
  *@
 
+@import views.html.components.*
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    fieldSet: FieldSet,
+    paragraph: Paragraph,
+    mainErrorSummary: MainErrorSummary
 )
 
 @(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
@@ -28,16 +33,22 @@
 
     @formHelper(action = routes.AddPaymentPlanEndDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
-        @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form))
-        }
+        @mainErrorSummary(form)
 
-        @govukRadios(
-            RadiosViewModel.yesNo(
-                field = form("value"),
-                legend = LegendViewModel(messages("addPaymentPlanEndDate.heading")).asPageHeading()
+        @fieldSet(
+            legend = "addPaymentPlanEndDate.heading",
+            asHeading = true,
+            describedBy = None
+        ) {
+            @paragraph("addPaymentPlanEndDate.p1")
+
+            @govukRadios(
+                RadiosViewModel.yesNo(
+                    field = form("value"),
+                    legend = LegendViewModel(messages(""))
+                ).copy(fieldset = None).inline()
             )
-        )
+        }
 
         @govukButton(
             ButtonViewModel(messages("site.continue"))
