--- a/app/views/components/FieldSet.scala.html
+++ b/app/views/components/FieldSet.scala.html
@@ -23,7 +23,7 @@
 @govukFieldset(Fieldset(
     legend = Some(Legend(
         content = Text(messages(legend)),
-        classes = if(asHeading) s"govuk-fieldset__legend--xl ${extraClasses}".trim else extraClasses,
+        classes = (if(asHeading) s"govuk-fieldset__legend--xl $extraClasses" else extraClasses).trim,
         isPageHeading = asHeading
     )),
     describedBy = describedBy,
