--- a/app/views/PaymentPlanTypeView.scala.html
+++ b/app/views/PaymentPlanTypeView.scala.html
@@ -32,7 +32,7 @@
     bulletList: BulletList
 )
 
-@(form: Form[_], mode: Mode, selectedAnswer: Option[DirectDebitSource], payingHmrcUrl: String,  call: Call)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, selectedAnswer: Option[DirectDebitSource], payingHmrcUrl: Option[String],  call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleForSetupJourney(form, messages("paymentPlanType.title")), backLink = Some(call.url)) {
 
@@ -122,15 +122,16 @@
                         "paymentPlan.collapsable.tc.b4"
                     )
                 ),
-                paragraphWithLink(
-                    message1    = Some(messages("paymentPlan.collapsable.tc.p6")),
-                    linkMessage = messages("paymentPlan.collapsable.tc.p6.link"),
-                    linkUrl     = payingHmrcUrl,
-                    linkFullStop = true,
-                    linkRel     = "noreferrer noopener",
-                    target      = "_blank",
-                )
-
+                payingHmrcUrl.map { url =>
+                    paragraphWithLink(
+                        message1     = Some(messages("paymentPlan.collapsable.tc.p6")),
+                        linkMessage  = messages("paymentPlan.collapsable.tc.p6.link"),
+                        linkUrl      = url,
+                        linkFullStop = true,
+                        linkRel      = "noreferrer noopener",
+                        target       = "_blank"
+                    )
+                }.getOrElse(HtmlFormat.empty)
             ))) { content =>
 
                 @govukDetails(
